Upgrade Java from 17 to 21 and fix Redis API compatibility